--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -1,2 +1,4 @@
-<h1><%= @animal.name %></h1>
+<h1>Wow, this <%= @animal.species.downcase %> is handsome!</h1>
 <%= cl_image_tag @animal.photo.key, height: 300, width: 400, crop: :fill %>
+<h2>Want to book <%= @animal.name.capitalize %>?</h2>
+<p>A few information about this cutie: <%= @animal.description %> <br>For only: <%= @animal.price %> €/day.</p>
