--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -2,4 +2,11 @@
   <% @animals.each do |animal| %>
     <li><%= animal.name %></li>
   <% end %>
+  <%= link_to "Remove",
+                  animal_path(animal),
+                  method: :delete,
+                  data: { confirm: "Are you sure?" } %>
+  <%= link_to "Update",
+                  animal_path(animal),
+                  method: :update %>
 </ul>
