--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -3,10 +3,10 @@
     <li><%= link_to animal.name, animal_path(animal) %></li>
   <% end %>
   <%= link_to "Remove",
-                  animal_path(animal),
+                  animal_path(@animal),
                   method: :delete,
                   data: { confirm: "Are you sure?" } %>
   <%= link_to "Update",
-                  animal_path(animal),
+                  animal_path(@animal),
                   method: :update %>
 </ul>
