--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -4,7 +4,7 @@
 <p>A few information about this cutie: <%= @animal.description %> <br>For only: <%= @animal.price %> €/day.</p>
 <%# <%= link_to "Book this mini crotte !", booking_path(animal) %>
 <%= link_to "Remove",
-                  animal_path(animal),
+                  animal_path(@animal),
                   method: :delete,
                   data: { confirm: "Are you sure?" } %>
 <%= link_to 'Back', animals_path %>
