--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -1,12 +1,13 @@
+<%= link_to "Add a mini crotte", new_animal_path %>
 <ul>
   <% @animals.each do |animal| %>
     <li><%= link_to animal.name, animal_path(animal) %></li>
-  <% end %>
   <%= link_to "Remove",
-                  animal_path(@animal),
+                  animal_path(animal),
                   method: :delete,
                   data: { confirm: "Are you sure?" } %>
   <%= link_to "Update",
-                  animal_path(@animal),
+                  animal_path(animal),
                   method: :update %>
+  <% end %>
 </ul>
