--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -9,3 +9,5 @@
                   data: { confirm: "Are you sure?" } %>
 <%= link_to 'Back', animals_path %>
 <%= link_to "All mini crottes", animals_path %>
+<%= link_to 'Back', animals_path %>
+<%= link_to 'Book this cutie', new_animal_booking_path(@animal) %>
