--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -3,9 +3,5 @@
 <h2>Want to book <%= @animal.name.capitalize %>?</h2>
 <p>A few information about this cutie: <%= @animal.description %> <br>For only: <%= @animal.price %> €/day.</p>
 <%# <%= link_to "Book this mini crotte !", booking_path(animal) %>
-<%= link_to "Remove",
-                  animal_path(@animal),
-                  method: :delete,
-                  data: { confirm: "Are you sure?" } %>
-<%= link_to 'Back', animals_path %>
-<%= link_to "All mini crottes", animals_path %>
+<%= link_to "Update", edit_animal_url(@animal) %>
+<%= link_to "Back to the list", animals_path %>
