--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -27,4 +27,4 @@
   <% end %>
 </ul>
 
-<%= link_to "All the mini crottes", to: animals_path %>
+<%= link_to "All the mini crottes", animals_path, class: "nav-link" %>
