added changes on show, to review

--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -1,8 +1,14 @@
-<h1>Wow, this <%= @animal.species.downcase %> is the cutest!</h1>
-<%= cl_image_tag @animal.photo.key, height: 300, width: 400, crop: :fill %>
-<h2>Want to book <%= @animal.name.capitalize %>?</h2>
-<p>A few things to know about this cutie: <%= @animal.description %> <br>For only: <%= @animal.price %> €/day.</p>
-<ul>
-<li><%= link_to 'Book this cutie', new_animal_booking_path(@animal) %></li>
-<li><%= link_to "Back to the list", animals_path %></li>
-</ul>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-12 col-lg-4">
+    <h1>Wow, this <%= @animal.species.downcase %> is the cutest!</h1>
+    <%= cl_image_tag @animal.photo.key, height: 400, width: 400, crop: :pad %>
+    <h2>Want to book <%= @animal.name.capitalize %>?</h2>
+    <p>A few things to know about this cutie: <%= @animal.description %> <br>Price: <%= @animal.price %> €/day.</p>
+    <ul>
+      <a href= "<%= dashboard_path %>" class="btn btn-outline-dark">Book this cutie!</a>
+      <a href= "<%= animals_path %>" class="btn btn-outline-dark">Back to the list</a>
+    </ul>
+    </div>
+  </div>
+</div>
