--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -1,5 +1,11 @@
-<ul>
-  <% @animals.each do |animal| %>
-  <li><%= link_to animal.name, animal_path(animal) %></li>
-  <% end %>
-</ul>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-12 col-lg-4">
+      <ul>
+        <% @animals.each do |animal| %>
+        <li><%= link_to animal.name, animal_path(animal) %></li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
+</div>
