--- a/app/views/animals/new.html.erb
+++ b/app/views/animals/new.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for(@animal) do |f| %>
-  <div class="form-inputs">
+  <%# <div class="form-inputs"> %>
     <%= f.input :name,
                 required: true,
                 autofocus: true,
@@ -14,10 +14,10 @@
             required: true,
             autofocus: true,
             input_html: { autocomplete: "price" }%>
+    <%= f.input :address,
+            input_html: { data: { geocoder_target: "address" }, class: "d-none" },
+            wrapper_html: { data: { controller: "geocoder", geocoder_api_key_value: ENV['MAPBOX_API_KEY'] } } %>
     <%= f.input :photo, as: :file %>
-  </div>
-
-  <div class="form-actions">
     <%= f.button :submit, "Add this mini crotte" %>
-  </div>
+  <%# </div> %>
 <% end %>
