--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -1,3 +1,12 @@
+<%= form_tag animals_path, method: :get do %>
+  <%= text_field_tag :query,
+    params[:query],
+    class: "form-control",
+    placeholder: "Find an animal"
+  %>
+  <%= submit_tag "Search", class: "btn btn-primary" %>
+<% end %>
+
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-12 col-lg-4">
