finishing things up

--- a/app/views/animals/edit.html.erb
+++ b/app/views/animals/edit.html.erb
@@ -18,4 +18,4 @@
                   data: { confirm: "Are you sure?" },
                   class: "nav-link" %></p>
 
-<p>Oops, missclick! <%= link_to 'Go back', animals_path %></p>
+<p>Oops, missclick! <%= link_to 'Go back', dashboard_path %></p>
