add plein de truc pour les cards de l'index

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -9,7 +9,7 @@
 }
 
 .mapboxgl-ctrl-geocoder {
-  max-width: none;
+  max-width: 200;
   width: 100%;
   border: 1px solid rgb(255, 255, 255);
   box-shadow: none;
