some card changes done

--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -1,11 +1,14 @@
-<%= form_tag animals_path, method: :get do %>
-  <%= text_field_tag :query,
-    params[:query],
-    class: "form-control",
-    placeholder: "Find an animal"
-  %>
-  <%= submit_tag "Search", class: "btn btn-primary" %>
-<% end %>
+
+  <%= form_tag animals_path, method: :get do %>
+    <%= text_field_tag :query,
+      params[:query],
+      class: "form-control rounded",
+      placeholder: "Find an animal"
+    %>
+    <%= submit_tag "Search", class: "btn btn-ghost" %>
+  <% end %>
+
+
 <ul>
   <% @animals.each do |animal| %>
   <div class="card" style="width: 18rem;">
