--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,36 +1,56 @@
-<h1>Hey <%= @user.name %> !</h1>
-<h2>Here are all your <strong>cutie</strong> bookings :</h2>
-<ul>
-  <% @bookings.each do |booking| %>
-    <li><%= cl_image_tag(booking.animal.photo.key,
-      width: 100, height: 100, crop: :fill, gravity: :face) %></li>
-    <li><%= booking.animal.name %></li>
-    <li><%= booking.date %></li>
-    <li><%= link_to "Details", animal_path(booking.animal), class: "nav-link" %></li>
-
-    <li><%= link_to "Remove",
-                booking_path(booking),
-                method: :delete,
-                data: { confirm: "Are you sure?" } %></li>
-  <% end %>
-</ul>
-
-<h2>And here, all your <strong>lovable</strong> mini crottes :</h2>
-<ul>
-  <% @animals.each do |animal| %>
-    <li><%= cl_image_tag(animal.photo.key,
-      width: 100, height: 100, crop: :fill, gravity: :face) %></li>
-    <li><%= animal.name %></li>
-    <li><%= link_to "Details", animal_path(animal), class: "nav-link" %></li>
-     <%= link_to "Remove",
-                  animal_path(animal),
-                  method: :delete,
-                  data: { confirm: "Are you sure?" },
-                  class: "nav-link" %>
-    <%= link_to "Update", edit_animal_path(animal), class: "nav-link" %>
-  <% end %>
-</ul>
-
-<%= link_to "Add a mini crotte", new_animal_path, class: "nav-link" %>
+<div class='container'>
+  <h1>Hey <%= @user.name.capitalize %> !</h1>
+  <br>
+  <br>
+    <h2>Here are all your <strong>cutie</strong> bookings :</h2>
+      <div class='row'>
+        <% @bookings.each do |booking| %>
+          <div class='col-2'>
+            <div class="card rounded-pill border-$gray-600 border-2">
+              <img class="card-img-top rounded-circle p-4" src='<%= cl_image_path booking.animal.photo.key, height: 200, width: 200, crop: :fill %>' alt="">
+                <h5 class="card-title text-center"><%= booking.animal.name %></h5>
+                  <p class="card-text text-center"><%= booking.date %></p>
+                    <div class='card-body text-center'>
+                      <%= link_to "Details", animal_path(booking.animal), class: "btn btn-ghost" %>
+                      <br>
+                      <%= link_to "Remove",
+                                booking_path(booking),
+                                method: :delete,
+                                data: { confirm: "Are you sure?" }, class:"btn btn-ghost"%>
+                    </div>
+            </div>
+          </div>
+        <% end %>
+      </div>
+</div>
 <br>
-<%= link_to "All the mini crottes", animals_path, class: "nav-link" %>
+<br>
+<div class='container'>
+  <h2>And here, all your <strong>lovable</strong> mini crottes :</h2>
+    <div class='row'>
+      <% @animals.each do |animal| %>
+        <div class='col-2'>
+          <div class="card rounded-pill border-$gray-600 border-2">
+            <img class="card-img-top rounded-circle p-4" src='<%= cl_image_path animal.photo.key, height: 200, width: 200, crop: :fill %>' alt="">
+              <h5 class="card-title text-center"><%= animal.name %></h5>
+                <div class='card-body text-center'>
+                  <%= link_to "Remove",
+                            animal_path(animal),
+                            method: :delete,
+                            data: { confirm: "Are you sure?" }, class:"btn btn-ghost"%>
+                  <br>
+                  <%= link_to "Update", edit_animal_path(animal), class: "btn btn-ghost"%>
+                </div>
+          </div>
+        </div>
+      <% end %>
+    </div>
+</div>
+<br>
+<br>
+<div class="text-center">
+  <%= link_to "Add a mini crotte", new_animal_path, class: "btn btn-ghost" %>
+  <br>
+  <br>
+  <%= link_to "All the mini crottes", animals_path, class: "btn btn-ghost" %>
+</div>
