--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -1,16 +1,31 @@
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-12 col-lg-4">
-    <h1>Wow, this <%= @animal.species.downcase %> is the cutest!</h1>
-    <%= cl_image_tag @animal.photo.key, height: 400, width: 400, crop: :pad %>
-    <h2>Want to book <%= @animal.name.capitalize %>?</h2>
-    <p>A few things to know about this cutie: <%= @animal.description %> </p>
-    <p>Price: <%= @animal.price %> €/day.</p>
-    <p>Address: <%= @animal.address %>.</p>
-    <ul>
-      <a href= "<%= new_animal_booking_path(@animal) %>" class="btn btn-outline-dark">Book this cutie!</a>
-      <a href= "<%= animals_path %>" class="btn btn-outline-dark">Back to the list</a>
-    </ul>
+<div class="has-bg-img">
+  <%# le background-img ne foncctionne pas %>
+  <img class="bg-img" src="../../images/background.jpg" alt="...">
+
+  <div class="row row-cols-8">
+    <div class="col text-center mx-5 p-5">
+      <h1>Wow, <%= @animal.name.capitalize %> is the cutest!</h1>
+
+      <div class="card row-cols-8 rounded">
+      <div class="card-img-top img-thumbnail">
+        <%= cl_image_tag @animal.photo.key, crop: :pad %>
+      </div>
+
+        <div class="card-body text-center">
+          <p><%= @animal.description %></p>
+        </div>
+        <div>
+          <p>Price: <%= @animal.price %> €/day.</p>
+          <p>Address: <%= @animal.address %>.</p>
+        </div>
+
+      </div>
     </div>
+  </div>
+  <div>
+      <ul class="d-flex justify-content-around mx-5 mt-4">
+        <a href= "<%= new_animal_booking_path(@animal) %>" class="btn btn-outline-dark">Book this cutie!</a>
+        <a href= "<%= animals_path %>" class="btn btn-outline-dark">Back to the list</a>
+      </ul>
   </div>
 </div>
