--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -13,18 +13,18 @@
       <div class='row'>
         <% @animals.each do |animal| %>
           <div class="col-4 my-2">
-            <div class= "card h-100 rounded-pill">
-              <div class= " border-dark m-3" >
-                <div class="text-decoration-none"><%= link_to animal_path(animal) do %>
-                    <img class="card-img-top rounded-circle" src=<%= cl_image_path animal.photo.key, height: 200, width: 200, crop: :fill %> alt="Card image cap">
-                    <div class="card-body text-center">
-                      <h5 class="card-title"><%= animal.name %></h5>
-                      <h6 class="card-subtitle mb-2 text-muted"><%= animal.species %></h6>
-                      <p class="card-text"><%= animal.description %></p>
-                      <p class="card-text"><%= animal.price %>€/day</p>
-                    </div>
+            <div class= "card h-100 border-secondary border-3 rounded-pill">
+              <div class= "" >
+                <div class="text-decoration-none text-dark m-3"><%= link_to animal_path(animal) do %>
+                  <img class="card-img-top rounded-circle" src=<%= cl_image_path animal.photo.key, height: 200, width: 200, crop: :fill %> alt="Card image cap">
+                  <div class="card-body text-center">
+                    <h5 class="card-title"><%= animal.name %></h5>
+                    <h6 class="card-subtitle mb-2 text-muted"><%= animal.species %></h6>
+                    <p class="card-text"><%= animal.description %></p>
+                    <p class="card-text"><%= animal.price %>€/day</p>
                   </div>
-                <% end %>
+                  <% end %>
+                </div>
               </div>
             </div>
           </div>
