--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -14,7 +14,7 @@
         <% @animals.each do |animal| %>
           <div class="col-4 my-2">
             <div class= "card h-100 rounded-pill">
-              <div class= " border-dark m-3" >
+              <div class= "m-3" >
                 <div class="text-decoration-none"><%= link_to animal_path(animal) do %>
                     <img class="card-img-top rounded-circle" src=<%= cl_image_path animal.photo.key, height: 200, width: 200, crop: :fill %> alt="Card image cap">
                     <div class="card-body text-center">
