--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -1,16 +1,23 @@
-<%= form_tag animals_path, method: :get do %>
-  <%= text_field_tag :query,
-    params[:query],
-    class: "form-control rounded",
-    placeholder: "Find an animal"
-  %>
-  <%= submit_tag "Search", class: "btn btn-ghost" %>
-<% end %>
-
 <div class="ms-4">
   <div class='row'>
     <div class="col-8 px-2 ">
       <div class='row'>
+      <div class="mx-auto" style="width: 800px">
+  <%= form_tag animals_path, method: :get do %>
+    <div class="search-form-control form-group">
+      <%= text_field_tag :query,
+        params[:query],
+        class: "form-control pb-2",
+        placeholder: "Find an animal"
+      %>
+        <button name="button" type="submit" class="btn btn-flat">
+          <%= submit_tag "Search", class: "btn btn-ghost" %>
+        </button>
+    </div>
+  <% end %>
+</div>
+<br>
+<br>
         <% @animals.each do |animal| %>
           <div class="col-4 my-2">
             <div class= "card h-100 rounded-pill">
