--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,18 +1,18 @@
-<div class='container'>
+<div id="dashboard">
+  <div class="container">
   <h1>Hey <%= @user.name.capitalize %> !</h1>
   <br>
   <br>
-    <h2>Here are all your <strong>cutie</strong> bookings :</h2>
+    <h2>Here are all your cutie <strong>bookings</strong> :</h2>
       <div class='row'>
         <% @bookings.each do |booking| %>
           <div class='col-2'>
             <div class="card rounded-pill border-$gray-600 border-2">
-              <img class="card-img-top rounded-circle p-4" src='<%= cl_image_path booking.animal.photo.key, height: 200, width: 200, crop: :fill %>' alt="">
+              <img class="card-img-top rounded-circle p-3" src='<%= cl_image_path booking.animal.photo.key, height: 200, width: 200, crop: :fill %>' alt="">
                 <h5 class="card-title text-center"><%= booking.animal.name %></h5>
                   <p class="card-text text-center"><%= booking.date %></p>
-                    <div class='card-body text-center'>
+                    <div class='card-body text-center pt-0 mt-3 mb-3'>
                       <%= link_to "Details", animal_path(booking.animal), class: "btn btn-ghost" %>
-                      <br>
                       <%= link_to "Remove",
                                 booking_path(booking),
                                 method: :delete,
@@ -22,24 +22,26 @@
           </div>
         <% end %>
       </div>
-</div>
+  </div>
+
 <br>
 <br>
 <div class='container'>
-  <h2>And here, all your <strong>lovable</strong> mini crottes :</h2>
+  <h2>And here, all your lovable <strong>mini crottes</strong> :</h2>
     <div class='row'>
       <% @animals.each do |animal| %>
         <div class='col-2'>
           <div class="card rounded-pill border-$gray-600 border-2">
-            <img class="card-img-top rounded-circle p-4" src='<%= cl_image_path animal.photo.key, height: 200, width: 200, crop: :fill %>' alt="">
+            <img class="card-img-top rounded-circle p-3" src='<%= cl_image_path animal.photo.key, height: 200, width: 200, crop: :fill %>' alt="">
               <h5 class="card-title text-center"><%= animal.name %></h5>
-                <div class='card-body text-center'>
+                <div class='card-body text-center pt-0 mt-3 mb-3'>
+                <div class='pt-0'>
                   <%= link_to "Remove",
                             animal_path(animal),
                             method: :delete,
                             data: { confirm: "Are you sure?" }, class:"btn btn-ghost"%>
-                  <br>
                   <%= link_to "Update", edit_animal_path(animal), class: "btn btn-ghost"%>
+                  </div>
                 </div>
           </div>
         </div>
@@ -49,8 +51,9 @@
 <br>
 <br>
 <div class="text-center">
-  <%= link_to "Add a mini crotte", new_animal_path, class: "btn btn-ghost" %>
+  <%= link_to "Add a mini crotte", new_animal_path, class: "btn btn-ghost btn-lg" %>
   <br>
   <br>
-  <%= link_to "All the mini crottes", animals_path, class: "btn btn-ghost" %>
+  <%= link_to "All the mini crottes", animals_path, class: "btn btn-ghost btn-lg" %>
+</div>
 </div>
