--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,9 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon p-0">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">
+    <a class="navbar" href="#">
       <%= image_tag "crotte.png", class: "rounded-circle w-90 h-80"%>
+      <%= image_tag "text.png", width: 280 %>
+  </div>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -27,6 +29,5 @@
           <!--/li-->
         <% end %>
       </ul>
-    </div>
   </div>
 </div>
