search bar et map ok

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,15 +1,14 @@
 .btn-ghost {
-  color: #EA9ABB;
-  border: 1px solid #EA9ABB;
+  color: #bb6187;
+  border: 1px solid #bb6187;
   padding: 3px;
   border-radius: 50px;
-  font-weight: lighter;
   opacity: 0.6;
   transition: opacity 0.3s ease;
 }
 
 .btn-ghost:hover {
   opacity: 1;
-  color: #BE8ABF;
+  color: #9b609c;
   border: 1px solid #BE8ABF;
 }
