--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -2,22 +2,6 @@
   <div class='row'>
     <div class="col-8 px-2 ">
       <div class='row'>
-      <div class="mx-auto" style="width: 800px">
-  <%= form_tag animals_path, method: :get do %>
-    <div class="search-form-control form-group">
-      <%= text_field_tag :query,
-        params[:query],
-        class: "form-control pb-2",
-        placeholder: "Find an animal"
-      %>
-        <button name="button" type="submit" class="btn btn-flat">
-          <%= submit_tag "Search", class: "btn btn-ghost" %>
-        </button>
-    </div>
-  <% end %>
-</div>
-<br>
-<br>
         <% @animals.each do |animal| %>
           <div class="col-4 my-2">
             <div class= "card h-100 rounded-pill">
@@ -39,7 +23,7 @@
       </div>
     </div>
     <div class='col-4'>
-      <div style="width: 100%; height: 100vh;"
+      <div id="map" style="width: 100%; height: 100vh;"
         data-controller="mapbox"
         data-mapbox-markers-value="<%= @markers.to_json %>"
         data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
