--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,5 +16,16 @@
 
 body {
   text-decoration: none;
-  color: #fff
+  color: #7da3be;
+  font-size: 20px;
+}
+
+a {
+  text-decoration: none;
+  color: #7da3be;
+}
+
+a:hover {
+  text-decoration: none;
+  color: #7da3be;
 }
