--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -13,8 +13,8 @@
               <p>Address: <%= @animal.address %>.</p>
             </div>
             <div class="w-100 d-flex justify-content-center">
-                <a href= "<%= new_animal_booking_path(@animal) %>" class="btn btn-ghost mx-5 p-2 border-2">Book this cutie!</a>
-                <a href= "<%= animals_path %>" class="btn btn-ghost mx-5 p-2 border-2">Back to the list</a>
+                <a href= "<%= new_animal_booking_path(@animal) %>" class="btn btn-ghost btn-lg mx-5">Book this cutie!</a>
+                <a href= "<%= animals_path %>" class="btn btn-ghost btn-lg mx-5">Back to the list</a>
             </div>
           </div>
         </div>
