--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,16 +16,24 @@
 
 body {
   text-decoration: none;
-  color: #7da3be;
+  color: #67889f;
   font-size: 20px;
 }
 
 a {
   text-decoration: none;
-  color: #7da3be;
+  color: #67889f;
 }
 
 a:hover {
   text-decoration: none;
-  color: #7da3be;
+  color: #67889f;
+}
+
+.card-title {
+  color: #EFADCE;
+}
+
+.card {
+  background-color: #FCF8F7;
 }
