--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,6 +1,6 @@
 <div id="dashboard">
   <div class="container">
-  <h1>Hey <%= @user.name.capitalize %> !</h1>
+  <h1 class='pt-5'><strong>Hey <%= @user.name.capitalize %> !</strong></h1>
   <br>
   <br>
     <h2>Here are all your cutie <strong>bookings</strong> :</h2>
