--- a/app/views/animals/new.html.erb
+++ b/app/views/animals/new.html.erb
@@ -1,23 +1,31 @@
-<%= simple_form_for(@animal) do |f| %>
-  <%# <div class="form-inputs"> %>
-    <%= f.input :name,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "name" }%>
-    <%= f.input :species,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "species" }%>
-    <%= f.input :description,
-                input_html: { autocomplete: "description" } %>
-    <%= f.input :price,
-            required: true,
-            autofocus: true,
-            input_html: { autocomplete: "price" }%>
-    <%= f.input :address,
-            input_html: { data: { geocoder_target: "address" }, class: "d-none" },
-            wrapper_html: { data: { controller: "geocoder", geocoder_api_key_value: ENV['MAPBOX_API_KEY'] } } %>
-    <%= f.input :photo, as: :file %>
-    <%= f.button :submit, "Add this mini crotte" %>
-  <%# </div> %>
-<% end %>
+<div class="ms-4">
+  <div class="container">
+    <div class="col-10 mx-auto px-1 d-flex justify-content-center m-0">
+      <div class='col-6 my-5'>
+        <%= simple_form_for(@animal) do |f| %>
+            <%= f.input :name,
+                        required: true,
+                        autofocus: true,
+                        input_html: { autocomplete: "name" }%>
+            <%= f.input :species,
+                        required: true,
+                        autofocus: true,
+                        input_html: { autocomplete: "species" }%>
+            <%= f.input :description,
+                        input_html: { autocomplete: "description" } %>
+            <%= f.input :price,
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "price" }%>
+            <%= f.input :address,
+                    input_html: { data: { geocoder_target: "address" }, class: "d-none" },
+                    wrapper_html: { data: { controller: "geocoder", geocoder_api_key_value: ENV['MAPBOX_API_KEY'] } } %>
+            <%= f.input :photo, as: :file %>
+            <div class="mt-5">
+              <%= f.button :submit, "Add this mini crotte", class:"btn btn btn-ghost pt-2 px-3 border-2 w-100" %>
+            </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
