--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,25 +3,26 @@
     <a class="navbar" href="#">
       <%= image_tag "crotte.png", class: "rounded-circle w-90 h-80"%>
       <%= image_tag "text.png", width: 280 %>
-  </div>
     </a>
+
+    <div>
+      <%= form_tag animals_path, style: "width:700px", method: :get do %>
+        <div class="search-form-control form-group">
+          <%= text_field_tag :query,
+            params[:query],
+            class: "form-control pb-2",
+            placeholder: "Find an animal"
+          %>
+            <button name="button" type="submit" class="btn btn-flat">
+              <%= submit_tag "Search", class: "btn btn-ghost" %>
+            </button>
+        </div>
+      <% end %>
+    </div>
+
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="mx-auto" style="width: 500px">
-  <%= form_tag animals_path, method: :get do %>
-    <div class="search-form-control form-group">
-      <%= text_field_tag :query,
-        params[:query],
-        class: "form-control pb-2",
-        placeholder: "Find an animal"
-      %>
-        <button name="button" type="submit" class="btn btn-flat">
-          <%= submit_tag "Search", class: "btn btn-ghost" %>
-        </button>
-    </div>
-  <% end %>
-</div>
 
     <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto align-items-center">
@@ -30,7 +31,7 @@
             <%= link_to "Home", animals_path, class: "nav-link" %>
           </li>
           <li class="nav-item dropdown">
-            <%= image_tag "avatar.png", class: "rounded-circle avatar dropdown-toggle img-fluid ", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+            <%= image_tag "avatar.png", class: "avatar dropdown-toggle img-fluid ", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <%= link_to "My profile", dashboard_path, class: "dropdown-item" %>
               <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
@@ -39,9 +40,10 @@
         <% else %>
           <!--li class="nav-item"-->
             <%= link_to "Login", user_session_path, class: "nav-link" %>
-             <%= link_to "Sign up", new_user_registration_path, class: "nav-link" %>
+              <%= link_to "Sign up", new_user_registration_path, class: "nav-link" %>
           <!--/li-->
         <% end %>
       </ul>
+    </div>
   </div>
 </div>
