--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,3 +37,11 @@ a:hover {
 .card {
   background-color: #FCF8F7;
 }
+
+h1 {
+  text-shadow: 1px 1px 3px #67889f;
+}
+
+h2 {
+  text-shadow: 1px 1px 3px #67889f;
+}
