--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -1,7 +1,7 @@
-<div class="ms-4">
+<div id="back-index" class="">
   <div class='row'>
-    <div class="col-8 px-2 ">
-      <div class='row mt-2'>
+    <div class="col-8">
+      <div class='row mt-2 ps-4 pb-3'>
         <% @animals.each do |animal| %>
           <div class="col-4 my-2">
             <div class= "card h-100 rounded-pill">
