--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -45,3 +45,10 @@ h1 {
 h2 {
   text-shadow: 1px 1px 3px #67889f;
 }
+
+.form-button {
+  text-decoration: none;
+  color: #67889f;
+  font-size: 20px;
+  margin-left: -13px;
+}
